--- a/47.html
+++ b/47.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <h2>Step 2: You're on the Right Path</h2>
-    <p>Clues are often hidden in plain sight — or in the page's source code.</p>
+    <p>Clues are often hidden in plain sight</p>
   </div>
 </body>
 <!-- Hidden clue in source -->
