--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to BlueHunt CTF</h1>
-    <h2>Challenge: Digital Breadcrumbs</h2>
+    <h1>Welcome to WebSteg CTF</h1>
+    <h2>Challenge: Find the hidden code</h2>
     <p>Your goal is to follow the hidden clues and uncover the final flag. Begin by exploring your browser's storage. 👀</p>
     <div>
       <span class="badge">#web</span>
@@ -49,8 +49,7 @@
     <p><strong>Category:</strong> Web</p>
     <h3>Hints:</h3>
     <ul style="text-align: left">
-      <li>Check your browser’s application tab. Cookies might be sweet and informative.</li>
-      <li>When you find a number, add it to the end of the current URL like this: /47</li>
+      <li>When you find a number, add it to the end of the current URL like this: /12</li>
     </ul>
   </div>
 </body>
