--- a/47/33.html
+++ b/47/33.html
@@ -31,8 +31,7 @@
     <h2>Step 3: Decode the Image</h2>
     <p>This image hides more than it shows. Use your favorite steganography decoding tool.</p>
     <!-- INSERT IMAGE BELOW -->
-    <img src="hidden-image.png" alt="Hidden clue image">
+    <img src="../assets/images/hidden flag.png" alt="Hidden clue image">
   </div>
 </body>
-<!-- secret: 91 -->
 </html>
