--- a/47/33.html
+++ b/47/33.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Step 3: Decode Me</title>
+  <title>Step 3: Find the Flag</title>
   <style>
     body {
       background-color: #e6f0ff;
@@ -28,9 +28,8 @@
 </head>
 <body>
   <div class="container">
-    <h2>Step 3: Decode the Image</h2>
-    <p>This image hides more than it shows. Use your favorite steganography decoding tool.</p>
-    <!-- INSERT IMAGE BELOW -->
+    <h2>Step 3: Flag is front of you!</h2>
+    <p>Here's your flag!</p>
     <img src="../assets/images/hidden flag.png" alt="Hidden clue image">
   </div>
 </body>
