--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Josh Min's CTF</h1>
+    <h1>Welcome to My CTF Challenge</h1>
     <h2>Challenge: Digital Breadcrumbs</h2>
-    <p>Your goal is to follow the hidden clues and uncover the final flag 👀</p>
+    <p>Your goal is to follow the hidden clues and uncover the final flag. 👀</p>
     <div>
       <span class="badge">#web</span>
       <span class="badge">#steganography</span>
@@ -74,14 +74,25 @@
       <span class="badge">#source</span>
     </div>
     <p><strong>Category:</strong> Web</p>
-
+  
+    <!-- 🔵 Helpful site block -->
+    <div style="margin-top: 2rem;">
+      <h3>🔗 Helpful Site</h3>
+      <p>Tool:  
+        <a href="https://stylesuxx.github.io/steganography/" target="_blank" style="color:#0059b3; text-decoration: underline;">
+          Visit External Resource
+        </a>
+      </p>
+    </div>
+  
+    <!-- 🔵 Hints toggle -->
     <button onclick="toggleHints()">Show Hints</button>
     <div id="hints" class="hint-box">
       <ul>
         <li>Check your browser’s Application tab → Cookies.</li>
-        <li>When you find a number, add it to the end of the current URL like this: <code>/12</code></li>
+        <li>When you find a number, add it to the end of the current URL like this: <code>/47</code></li>
       </ul>
     </div>
-  </div>
+  </div>  
 </body>
 </html>
