--- a/47/33.html
+++ b/47/33.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Step 3: Find the Flag</title>
+  <title>Page 3 - Look Closer</title>
   <style>
     body {
       background-color: #e6f0ff;
@@ -20,17 +20,52 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     img {
-      max-width: 100%;
-      border: 2px solid #003366;
-      border-radius: 8px;
+      max-width: 90%;
+      height: auto;
+      margin-top: 1rem;
+      border-radius: 6px;
+    }
+    button {
+      margin-top: 1.5rem;
+      padding: 0.5rem 1rem;
+      background-color: #0059b3;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    button:hover {
+      background-color: #004080;
+    }
+    .hint-box {
+      display: none;
+      margin-top: 1rem;
+      background-color: #f0f8ff;
+      padding: 1rem;
+      border-left: 4px solid #0059b3;
+      border-radius: 6px;
     }
   </style>
+  <script>
+    function showHint() {
+      document.getElementById('hintText').style.display = 'block';
+    }
+  </script>
 </head>
 <body>
   <div class="container">
-    <h2>Step 3: Flag is front of you!</h2>
-    <p>Here's your flag!</p>
-    <img src="../assets/images/hidden flag.png" alt="Hidden clue image">
+    <h1>Almost There 🧩</h1>
+    <p>There’s something hidden here. Time to decode the truth.</p>
+
+    <!-- Insert your hidden-image.png here -->
+    <img src="../assets/images/hidden flag.png" alt="Stego Image" />
+
+    <!-- Hint button -->
+    <button onclick="showHint()">Show Hint</button>
+    <div id="hintText" class="hint-box">
+      <p>Hint: Use the tool</p>
+    </div>
   </div>
 </body>
 </html>
